tests/unit/parser/invalid-problems/mismatched-domain-name.pddl
; used domain name `not-right` (3:18) doesn't match paired domain name
(define (problem mismatched-domain-name)
        (:domain not-right)
        (:goal (and)))